fixed quantity accessibility on mobile,added 2xl display design

--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@
    display: grid;
    grid-template-columns: 1fr;
    gap: 0.85rem;
+   grid-auto-rows: 26rem;
 }
 
 .card-img > img:hover {
